# rpi-0-opencv-sample

./: CMakeLists.txt  sample.cpp
